--- a/materialize-hakyll.cabal
+++ b/materialize-hakyll.cabal
@@ -4,6 +4,7 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
+  other-modules:    Config
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.9.*
@@ -13,5 +14,6 @@ executable site
                   , mtl == 2.2.*
                   , conduit-combinators == 1.1.*
                   , hakyll-sass == 0.2.*
+                  , yaml
   ghc-options:      -threaded
   default-language: Haskell2010
