Update links in config.yml

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 general:
-  base_url: "https://materialize-hakyll.github.io"
-  head_title: Materialize Hakyll
-  site_title: Materialize Hakyll
+  base_url: "https://futtetennismo.github.io./materialize-hakyll"
+  head_title: "Materialize Hakyll"
+  site_title: "Materialize Hakyll"
   paginate: 7
 
 # Colour (css class, see: http://materializecss.com/color.html)
@@ -12,12 +12,12 @@ style:
   footer_colour: "indigo lighten-1"
   footer_btn_colour: "indigo lighten-2"
   footer_link_colour: "red-text text-accent-1"
-  navbar_text_colour_desktop: white-text
-  navbar_text_colour_mobile: waves-effect waves-teal black-text"
+  navbar_text_colour_desktop: "white-text"
+  navbar_text_colour_mobile: "waves-effect waves-teal black-text"
 
 feed:
   title: "Materialize Hakyll"
   description: "This theme is a fork of [materialize-jekyll](https://github.com/mumuxme/materialize-jekyll)"
   author_name: "futtetennista"
   author_email: "futtetennista@gmail.com"
-  root: "https://materialize-hakyll.github.io"
+  root: "https://futtetennismo.github.io./materialize-hakyll"
