Push to gh-pages branch
Use an orphan branch since the history of the branch is not needed (everything is generated from the source branch)i

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,13 +26,13 @@ jobs:
             git config --global user.email robots@circleci.com
             git config --global user.name CircleCI
             stack exec site rebuild
-            git checkout master
-            git reset --hard origin/master
-            git pull --rebase
+            git checkout --orphan gh-pages
+            git rm -rf .
             # Overwrite existing files with new files
             cp -a _site/. .
+            rm -rf _site/ .stack-work/ _cache/
             #  Commit
-            git add --all
+            git add .
             git commit -m "[`date '+%F %T %Z'`] New release"
             # Push
-            git push origin master:master
+            git push origin gh-pages:gh-pages
